# bevy_nety

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/bevy_nety_protocol/: Cargo.toml
crates/bevy_nety_protocol/src/: lib.rs
crates/bevy_nety_tcp/: Cargo.toml
crates/bevy_nety_tcp/src/: lib.rs
examples/: local.rs  tcp.rs
src/: add_network_data.rs  client.rs  entity.rs  event_queue.rs  events.rs  internal_protocol.rs  lib.rs  messages.rs  network.rs  network_type_name.rs  player.rs  player_data.rs  plugin.rs  registry.rs  relevancy.rs  serialized_struct.rs  serializer.rs  server.rs
src/tests/: connection_events.rs  entities_spawn_despawn.rs  entity_events_from_client.rs  entity_events_from_owner.rs  entity_events_from_server.rs  entity_owner.rs  entity_relevancy.rs  game_events.rs  game_events_from_client.rs  game_events_from_server.rs  is.rs  mod.rs  multiple_joins_leaves.rs  player_data.rs  player_join_events.rs  player_leave_events.rs  players.rs
src/tests/common/: app_setup_for_tests.rs  introspection.rs  mod.rs  pseudo_network.rs  test_environment.rs  test_events.rs  test_structs.rs
